fix: shallow section spacing

--- a/static/sass/_pattern_blog-article.scss
+++ b/static/sass/_pattern_blog-article.scss
@@ -28,7 +28,7 @@
   .blog-article-share {
     margin-top: $spv--strip-shallow;
     position: sticky;
-    top: 2rem;
+    top: 5rem;
 
     // 8px gap between the share icons.
     .p-inline-list__item {
